# smtp-dane-verify

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.adoc  README.md  RELEASE.md  docker-compose.yml  entrypoint.sh  pyproject.toml  shell.nix
assets/: zabbix_smtp_dane_verify_item.yaml
smtp_dane_verify/: __main__.py  api.py  cli.py  dns_records.py  dnssec.py  external_resolver.py  test1.py  verification.py
smtp_tlsa_verify/: __main__.py  api.py  cli.py  dns_records.py  fastapi.py  verification.py
tests/: conftest.py  test_dns_records.py  test_verification.py
