[project]
name = "smtp-dane-verify"
version = "0.3.2"
description = "A small library, command-line utility, Prometheus exporter, and JSON/HTTP/FastAPI service to check DANE/TLSA-RRs against SMTP servers."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE.*"]
dependencies = [
    "cryptography>=45.0.6",
    "dnspython>=2.7.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3"]

[project.optional-dependencies]
fastapi = [
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "pipx>=1.7.1",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "tox>=4.28.3",
]
fastapi = [
    "fastapi[standard]>=0.116.1",
]

[project.scripts]
danesmtp = "smtp_dane_verify.cli:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

